--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -1116,6 +1116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link to info: https://pythonexamples.org/how-to-change-datatype-of-columns-in-pandas-dataframe/ "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1127,7 +1134,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Used_Car = Used_Car.astype({\n",
+    "    'Brand': 'string',\n",
+    "    'Car_type': 'string',\n",
+    "    'Brandname_and_model': 'string', \n",
+    "    'Model_type': 'string',\n",
+    "    'Price': 'int64', \n",
+    "    'Price2': 'string', \n",
+    "    'Seller_type': 'category', \n",
+    "    'Selling_type': 'category', \n",
+    "    'Listing_country': 'category',\n",
+    "    'Listing_zip_code': 'int64', \n",
+    "    'Nb_previous_owners': 'string', \n",
+    "    'Mileage': 'int64', \n",
+    "    'Mileage2': 'string',\n",
+    "    'Power': 'category', \n",
+    "    'Transmission': 'category', \n",
+    "    'Fuel_type': 'category', \n",
+    "    'Fuel_type2': 'category', \n",
+    "    'Fuel_consumption': 'string',\n",
+    "    'Fuel_emissions': 'string', \n",
+    "    'First_registration': 'string', \n",
+    "    'First_registration2': 'string',\n",
+    "    'specific_model': 'int64', \n",
+    "    'Power_CH': 'int64'\n",
+    "}, errors='ignore')"
+   ]
   },
   {
    "cell_type": "markdown",
